# music

./: human_music.py  plan.md
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json
frontend/src/: App.module.css  App.tsx  main.rs
frontend/src/app/: ChannelEditor.module.css  ChannelEditor.tsx  channelsSlice.ts  store.ts
